platform/argocd/foundations/37b9c5c7-b764-4a45-992a-f14dbce94420.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kp-rc366-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 37b9c5c7-b764-4a45-992a-f14dbce94420
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: b87693b1-4925-4049-9814-cf768bac0dd3
    kuberploy.io/runtime-namespace: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.36
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.36
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.36
  annotations:
    argocd.argoproj.io/sync-wave: "-30"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-default-deny
  namespace: kp-rc366-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 37b9c5c7-b764-4a45-992a-f14dbce94420
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: b87693b1-4925-4049-9814-cf768bac0dd3
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-dns-egress
  namespace: kp-rc366-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 37b9c5c7-b764-4a45-992a-f14dbce94420
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: b87693b1-4925-4049-9814-cf768bac0dd3
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kuberploy-http01-solver-ingress
  namespace: kp-rc366-qualification-production
  labels:
    app.kubernetes.io/managed-by: kuberploy
    kuberploy.io/environment-id: 37b9c5c7-b764-4a45-992a-f14dbce94420
    kuberploy.io/foundation-contract: v2
    kuberploy.io/project-id: b87693b1-4925-4049-9814-cf768bac0dd3
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
spec:
  podSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuberploy-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8089
